allprojects {
    group = 'fr.mrmicky'
    version = '2.1.6'
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    repositories {
        mavenCentral()

        maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
        maven { url 'https://maven.enginehub.org/repo/' }
    }

    dependencies {
        compileOnly 'org.jetbrains:annotations:24.0.1'
        compileOnly 'org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT'
    }
}
